src/test/ui/issues/issue-20772.stderr
error[E0391]: cycle detected when computing the supertraits of `T`
  --> $DIR/issue-20772.rs:1:1
   |
LL | / trait T : Iterator<Item=Self::Item>
LL | |
LL | | {}
   | |__^
   |
   = note: ...which again requires computing the supertraits of `T`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-20772.rs:1:1
   |
LL | / trait T : Iterator<Item=Self::Item>
LL | |
LL | | {}
   | |__^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
